--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,14 @@
 flask==2.2.3
 flask-cors==3.0.10
 flask-jwt-extended==4.4.4
-flask-pymongo==2.3.0
+flask-sqlalchemy==3.0.3
+flask-migrate==4.0.4
 gunicorn==20.1.0
 Werkzeug==2.2.3
 
 # Database
-pymongo==4.3.3
+psycopg2-binary==2.9.5
+sqlalchemy==2.0.7
 
 # Trading and Data Analysis
 ccxt==3.0.74  # Cryptocurrency exchange trading library
