--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,12 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.4.3"
+    "zustand": "^4.4.3",
+    "@stripe/stripe-js": "^2.1.11",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "date-fns": "^2.30.0",
+    "classnames": "^2.3.2",
+    "recharts": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
