--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ passlib==1.7.4
 python-dotenv==1.0.0
 requests==2.28.2
 websocket-client==1.5.1
+websockets==11.0.3  # For WebSocket server functionality
 apscheduler==3.10.1  # For scheduling tasks
 
 # Testing
