Update trading bot backend: fix imports, add test utilities, improve Flask app configuration

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 # Pytest configuration file
 minversion = 6.0
 addopts = 
@@ -56,9 +56,7 @@ filterwarnings =
     ignore:.*ssl.*:urllib3.exceptions.InsecureRequestWarning
     ignore:.*unverified HTTPS request.*:urllib3.exceptions.InsecureRequestWarning
 
-# Test timeout (in seconds)
-timeout = 300
-timeout_method = thread
+# Test timeout configuration removed - requires pytest-timeout plugin
 
 # Logging
 log_cli = true
