--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -46,6 +46,7 @@ stripe==5.2.0
 schedule==1.2.0  # Task scheduling
 redis==4.5.4  # For caching and session management
 celery==5.2.7  # For background tasks
+Flask-Caching==2.0.2
 psutil==5.9.4  # System monitoring
 requests-oauthlib==1.3.1  # OAuth support
 cryptography==40.0.1  # Enhanced encryption
