--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "lightweight-charts": "^4.1.3",
+    "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
