feat: Complete production-ready enhancements
- Add comprehensive 90-120s demo walkthrough in README
- Integrate Sentry error tracking and monitoring
- Create Windows-compatible make.bat for deployment
- Add comprehensive pytest test suite (5-10 essential tests)
- Implement GitHub Actions CI with coverage badges
- Document API key security and encryption
- Remove demo API key fallbacks for production security
- Fix frontend import mismatches
- Add Sentry configuration, middleware, and documentation
- Update environment files with Sentry variables

All 8 planned tasks completed successfully.

--- a/.env.example
+++ b/.env.example
@@ -141,6 +141,14 @@ TELEGRAM_CHAT_ID=your_telegram_chat_id
 PROMETHEUS_PORT=8000
 HEALTH_CHECK_INTERVAL=60
 
+# Sentry Error Tracking (Optional)
+SENTRY_DSN=your_sentry_dsn_here
+SENTRY_ENVIRONMENT=development
+SENTRY_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_PROFILES_SAMPLE_RATE=0.1
+SENTRY_RELEASE=1.0.0
+
 # =============================================================================
 # BACKUP CONFIGURATION
 # =============================================================================
