--- a/backend/.env.example
+++ b/backend/.env.example
@@ -64,6 +64,14 @@ TESTING=false
 # CORS settings
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
+# Sentry Error Tracking (Optional)
+SENTRY_DSN=your_sentry_dsn_here
+SENTRY_ENVIRONMENT=development
+SENTRY_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_PROFILES_SAMPLE_RATE=0.1
+SENTRY_RELEASE=1.0.0
+
 # Database settings
 DB_POOL_SIZE=10
 DB_MAX_OVERFLOW=20
