feat: Complete enterprise transformation with SaaS, billing, and production features
- Add comprehensive multi-tenant SaaS architecture with Stripe billing
- Implement license management system with remote validation and revocation
- Add PyInstaller build system with PyArmor code obfuscation
- Create buyer-specific deployment packages for different tiers
- Add extensive documentation (BUYER_GUIDE, TRADING_STRATEGIES, etc.)
- Implement enterprise security features and API key encryption
- Add comprehensive test suite and CI/CD pipeline
- Create legal compliance documents (EULA, DISCLAIMER, REFUND_POLICY)
- Add 7-day free support system and comprehensive support documentation
- Update Makefile with 20+ new build and deployment targets
- Add production-ready environment configuration
- Implement tenant isolation and resource management
- Add monitoring, logging, and performance optimization features

--- a/.env.example
+++ b/.env.example
@@ -166,8 +166,17 @@ AWS_REGION=us-east-1
 # LICENSE CONFIGURATION
 # =============================================================================
 LICENSE_KEY=your_license_key_here
-LICENSE_SERVER_URL=https://api.tradingbot.com/license
+LICENSE_SERVER_URL=https://license.tradingbot.pro
 LICENSE_CHECK_INTERVAL=86400
+
+# License Server Configuration (for license server deployment)
+LICENSE_SERVER_PORT=8080
+LICENSE_SERVER_SECRET=your-license-server-secret-key-change-in-production
+LICENSE_ADMIN_KEY=your-license-admin-api-key-change-in-production
+
+# License Client Configuration
+ENABLE_REMOTE_LICENSE_CHECK=true
+LICENSE_CACHE_TIMEOUT=3600
 
 # =============================================================================
 # PERFORMANCE SETTINGS
@@ -189,6 +198,105 @@ MAX_CANDLES_FETCH=1000
 STRATEGY_UPDATE_INTERVAL=60
 BACKTEST_MAX_DAYS=365
 OPTIMIZATION_MAX_ITERATIONS=100
+
+# =============================================================================
+# STRIPE BILLING CONFIGURATION
+# =============================================================================
+# Stripe API Keys (get from Stripe Dashboard)
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
+
+# Stripe Price IDs for subscription plans
+STRIPE_STARTER_MONTHLY_PRICE_ID=price_starter_monthly_id
+STRIPE_STARTER_YEARLY_PRICE_ID=price_starter_yearly_id
+STRIPE_PROFESSIONAL_MONTHLY_PRICE_ID=price_professional_monthly_id
+STRIPE_PROFESSIONAL_YEARLY_PRICE_ID=price_professional_yearly_id
+STRIPE_ENTERPRISE_MONTHLY_PRICE_ID=price_enterprise_monthly_id
+STRIPE_ENTERPRISE_YEARLY_PRICE_ID=price_enterprise_yearly_id
+STRIPE_INSTITUTIONAL_MONTHLY_PRICE_ID=price_institutional_monthly_id
+STRIPE_INSTITUTIONAL_YEARLY_PRICE_ID=price_institutional_yearly_id
+
+# =============================================================================
+# MULTI-TENANT CONFIGURATION
+# =============================================================================
+# Master database for tenant management
+MASTER_DATABASE_URL=sqlite:///master_tenant.db
+# MASTER_DATABASE_URL=postgresql://username:password@localhost:5432/master_tenant
+
+# Tenant database configuration
+TENANT_DATABASE_BASE_URL=sqlite:///data/tenants
+# TENANT_DATABASE_BASE_URL=postgresql://username:password@localhost:5432
+
+# Tenant Redis configuration
+TENANT_REDIS_BASE_URL=redis://localhost:6379
+
+# Tenant storage configuration
+TENANT_STORAGE_BASE_PATH=data/tenant_storage
+
+# Tenant routing configuration
+TENANT_ROUTING_METHOD=subdomain
+# Options: subdomain, domain, header, path
+
+# Default tenant limits
+DEFAULT_TENANT_API_RATE_LIMIT=100
+DEFAULT_TENANT_STORAGE_MB=100
+DEFAULT_TENANT_MAX_STRATEGIES=3
+DEFAULT_TENANT_MAX_EXCHANGES=2
+
+# =============================================================================
+# SAAS PLATFORM CONFIGURATION
+# =============================================================================
+# Platform settings
+PLATFORM_NAME=TradingBot Pro
+PLATFORM_DOMAIN=tradingbot.pro
+PLATFORM_SUPPORT_EMAIL=support@tradingbot.pro
+
+# Trial settings
+DEFAULT_TRIAL_DAYS=7
+TRIAL_FEATURE_LIMITS=true
+
+# Usage tracking
+USAGE_TRACKING_ENABLED=true
+USAGE_AGGREGATION_INTERVAL=3600
+
+# Billing settings
+BILLING_GRACE_PERIOD_DAYS=3
+AUTO_SUSPEND_ON_PAYMENT_FAILURE=true
+DUNNING_MANAGEMENT_ENABLED=true
+
+# =============================================================================
+# ENTERPRISE FEATURES
+# =============================================================================
+# White-label configuration
+WHITE_LABEL_ENABLED=false
+CUSTOM_BRANDING_ENABLED=false
+CUSTOM_DOMAIN_ENABLED=false
+
+# SSO Configuration
+SSO_ENABLED=false
+SAML_ENABLED=false
+OIDC_ENABLED=false
+
+# Advanced security
+IP_WHITELISTING_ENABLED=false
+AUDIT_LOGGING_ENABLED=true
+COMPLIANCE_MODE=false
+
+# =============================================================================
+# DEVELOPMENT & TESTING
+# =============================================================================
+# Test tenant configuration
+TEST_TENANT_ID=test_tenant_001
+TEST_TENANT_DOMAIN=test.localhost
+
+# Mock billing for development
+MOCK_BILLING_ENABLED=true
+SKIP_PAYMENT_VERIFICATION=true
+
+# Demo mode settings
+DEMO_MODE_ENABLED=false
+DEMO_DATA_ENABLED=false
 
 # =============================================================================
 # API CONFIGURATION
