--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,38 @@ BINANCE_API_KEY=your-binance-api-key
 BINANCE_API_SECRET=your-binance-api-secret
 BINANCE_TESTNET=True
 
+# Coinbase Pro API settings
+COINBASE_API_KEY=your-coinbase-api-key
+COINBASE_API_SECRET=your-coinbase-api-secret
+COINBASE_PASSPHRASE=your-coinbase-passphrase
+COINBASE_TESTNET=true
+COINBASE_ENABLED=true
+
+# KuCoin API settings
+KUCOIN_API_KEY=your-kucoin-api-key
+KUCOIN_API_SECRET=your-kucoin-api-secret
+KUCOIN_PASSPHRASE=your-kucoin-passphrase
+KUCOIN_TESTNET=true
+KUCOIN_ENABLED=true
+
+# Bybit API settings
+BYBIT_API_KEY=your-bybit-api-key
+BYBIT_API_SECRET=your-bybit-api-secret
+BYBIT_TESTNET=true
+BYBIT_ENABLED=true
+
+# Kraken API settings
+KRAKEN_API_KEY=your-kraken-api-key
+KRAKEN_API_SECRET=your-kraken-api-secret
+KRAKEN_ENABLED=true
+
+# OKX API settings
+OKX_API_KEY=your-okx-api-key
+OKX_API_SECRET=your-okx-api-secret
+OKX_PASSPHRASE=your-okx-passphrase
+OKX_TESTNET=true
+OKX_ENABLED=true
+
 # Trading settings
 DEFAULT_TRADE_AMOUNT=10.0
 MAX_OPEN_TRADES=3
