--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
