Add plugin marketplace system with documentation and templates

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,19 @@ TESTING=False
 SECRET_KEY=your-secret-key-change-in-production-make-it-long-and-random
 JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 
+# Encryption settings for sensitive data
+ENCRYPTION_KEY_FILE=encryption.key
+CREDENTIALS_FILE=credentials.enc
+
+# JWT token settings
+JWT_ALGORITHM=HS256
+JWT_EXPIRY_HOURS=24
+
+# Rate limiting settings
+API_RATE_LIMIT_REQUESTS=60
+API_RATE_LIMIT_WINDOW_SECONDS=60
+RATE_LIMITING_ENABLED=true
+
 # =============================================================================
 # DATABASE CONFIGURATION
 # =============================================================================
